--- a/randomguess.html
+++ b/randomguess.html
@@ -84,7 +84,7 @@
     <button onclick="checkGuess()" id="myButton">Submit Guess</button><br/><br/>
     <p style='color:white;font-size:25px'>Remaining tries: <span id="tries">3</span></p><br/><br/><br/>
     <p id="vr" style='color:white;font-size:15px'></p><br/>
-	<p id="overText">Random guess game by:<span id="t"> Vijay</span></p>
+	<p id="overText">Random guess game by:<span id="t">T.Olivasyaa</span></p>
 </div>
 
 <script>
